# anpr_raspberry

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: toolchain-rpi4.cmake
config/: anpr.env.example
include/anpr_raspberry/: Config.h  FrameBuffer.h  InferenceFrame.h  user01@192.168.1.10
scripts/: load_config.sh
src/: Config.cpp  main.cpp
